# Raspberry-pi-pico-4wd

./: .gitignore  BTS7960_BLE.py  Omnidirectional robot.key  Omnidirectional robot.pptx  Project Report Format.docx  README.md  hardware.html  index.html  index.js  method.html  pythonbot.py
PPTS/: Omnidirectional robot.key
RP2040 pico 4wd_BLE/: pythonbot.py
Reports/: Python report.docx  synopsis python .pages
css/: style.css
micropython/: led.py
pics/: Untitled Diagram.drawio  remote.py
projects/: CMakeLists.txt
sample/: index.html  script.js  style.css
src/: pythonbot.py
